--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -2,16 +2,28 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.detail.DetailFragment">
 
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/layout_toolbar"/>
+
         <TextView
+            android:background="@color/black"
             android:id="@+id/tvDetail"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="@dimen/_300sdp" />
 
-    </FrameLayout>
+        <TextView
+            android:layout_marginTop="@dimen/_minus10sdp"
+            android:background="#E40000"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"/>
+
+    </LinearLayout>
 </layout>
