--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,6 +15,9 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/splashFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_splashFragment_to_productListFragment"
+            app:destination="@id/productListFragment" />
     </fragment>
 
     <fragment
@@ -32,4 +35,8 @@
         android:name="com.dungnd.mvvm.ui.detail.DetailFragment"
         android:label="DetailFragment"
         tools:layout="@layout/fragment_detail" />
+    <fragment
+        android:id="@+id/productListFragment"
+        android:name="com.dungnd.mvvm.ui.chuabuoi11.ProductListFragment"
+        android:label="ProductListFragment" />
 </navigation>
